fixed the layout overflow

--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@ body {
 }
 
 .container {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
 
   display: grid;
 
-  grid-template-columns: 200px auto;
+  grid-template-columns: 250px auto;
   grid-template-rows: 150px auto;
 
 }
@@ -37,14 +37,14 @@ nav {
   background-color: var(--primary-main);
   color: var(--white);
 
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 header {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
 
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -61,10 +61,11 @@ main {
 
   background-color: var(--primary-background);
 
-  z-index: -1;
+  /* z-index: -1; */
 
   display: grid;
   grid-template-columns: 5fr 3fr;
+  /* grid-template-columns: 500px 300px; */
   grid-template-rows: 1fr 1fr;
   gap: 20px;
 
@@ -135,10 +136,13 @@ svg {
   font-weight: 500;
 }
 
-.project-card-container {
+.project-container {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
 
+}
+
+.project-card-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
@@ -223,7 +227,6 @@ main div h2 {
   text-decoration: none;
   color: var(--white);
   font-size: 1.25rem;
-  height: 100%;
   margin-left: 10px;
 }
 
